crates/templates/tests/snapshots/function_test__impl-2.snap
---
source: crates/templates/tests/function_test.rs
description: Function with no lines
expression: output
---
# Test simple function
foo() {
  echo "No implementation body found for function foo"
}

