crates/templates/tests/snapshots/function_test__impl-4.snap
---
source: crates/templates/tests/function_test.rs
expression: output
---
# Test simple function
foo() {

  echo "No implementation body found for function foo"
}

