crates/templates/tests/snapshots/function_test__impl.snap
---
source: crates/templates/tests/function_test.rs
description: Normal function
expression: output
---
# Simple function
foo() {
  foo
  bar
  baz
}

